@@ -43,10 +43,12 @@ date Version 3.00.05
 * Fixed FS#72 — "When editing a property in the property grid, it is lost when you click away."
 * Fixed FS#73 — "Toolbar tools not selecting the object in the object tree."
 * Fixed FS#71 — "wxSplitter window sashpos not being set."
+* ID_DEFAULT is no longer defined when not used.
 ^ Object tree now saves its state.
 ^ Object tree now also scrolls horizontally when selecting an object.
 ^ Added class name and line to error message for unknown classes when importing xrc.
 ^ Improved both C++ and XRC code generation for wxSplitterWindow.
+^ Implemented FS#26 — "Chronological id creation."
 + Added support for using wxSplitterWindow with only one child.
 + Added min_pane_size and sashsize properties to wxSplitterWindow.
 + Added maximum size property to wxWindow properties.
